@@ -63,3 +63,4 @@ v 1.5:
 	- Fixed an error on 'manucheckv'. If the users doesn't have the variable it fell through causing an exception.
 	- Added checking of subgroups for Info nodes.
 	- Expanded 'canUserBuild()' to include inheritance and subgroups.
+	- Added a config.yml setting of 'validate_toggle' for those who prefer 'mantogglevalidate' to always be off.
